# FrenchTeam

./: CMakeLists.txt  README.md
assets/Animations/: bomberManDeath.iqm  bombermanDeadAnim.iqm  bombermanIdleAnim.iqm  bombermanWalkAnim.iqm
assets/Bomb/: BombIdleAnim.iqm
assets/Map/Brick/: Brick.mtl
assets/Models/: bombermanModel.iqm
include/: Bomb.hpp  BombManager.hpp  Engine.hpp  Map.hpp  Menu.hpp  Player.hpp  uVector.hpp
src/: Main.cpp  Main.hpp
src/Game/: Engine.cpp
src/Game/Loop/Display/: Menu.cpp  commands.txt
src/Game/Object/Character/: Player.cpp
src/Game/Object/Platform/Bombs/: Bomb.cpp  BombManager.cpp
src/Game/Object/Platform/Map/: Map.cpp
